# tutorial_cven322

./: .gitignore  README.md  pyproject.toml
docs/: README.md  _sidebar.md  economics.md  index.html  optimization.md  simulation.md  sustainability.md
src/cven_app/: main.py
src/cven_app/modules/: economics.py  optimization.py  simulation.py  sustainability.py
